--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 <h1 style="color: #bfbfbf !important;text-align: center"www.4h.tv</h1>
     <div class="div1">
         <div class="div2">
-            <button onclick="window.open('	http://y7f.xyz')">官-方-地-址-1</button>
+            <button onclick="window.open('	http://7kkd.com')">官-方-地-址-1</button>
 
 
         </div>
 	        <div class="div2">
-            <button onclick="window.open('	http://y7f.xyz')">官-方-地-址-2</button>
+            <button onclick="window.open('	http://2yye.com')">官-方-地-址-2</button>
 
 
         </div>	
